--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 body {
   margin: 0;
-  font-family: "Roboto Mono", "Roboto Mono", "Vazirmatn", monospace;
+  font-family: "Roboto", "Roboto", "Vazirmatn", monospace;
 }
