--- a/src/App.scss
+++ b/src/App.scss
@@ -16,41 +16,73 @@ $error-color: #d70000;
     grid-template-rows: auto 0.9fr auto;
     padding: 2rem;
 
-    .typingTest {
+    .middleContainer {
       display: grid;
       grid-template-rows: 1fr auto 1fr;
 
-      .wordInput {
-        z-index: -1;
-      }
+      .typingTest {
+        display: grid;
+        grid-template-rows: 1fr auto 1fr;
 
-      .wordContainer {
-        background-color: $bg-color;
-        height: 117.562px;
-        font-size: 1.5rem;
-        
-        .word {
-          line-height: 1em;
-          font-variant: no-common-ligatures;
-          font-size: 1em;
-          display: inline-block;
-          margin: 0.25em;
-          color: $sub-color;
-          border-bottom: 2px solid transparent;
-
-          &.error {
-            border-bottom: $error-color 2px solid;
-          }
-
-          .letter {
+        .stats {
+          div {
+            font-size: 1.5rem;
             display: inline-block;
-            
-            &.correct {
-              color: $main-color;
+            margin: 0.25em;
+          }
+        }
+
+        .wordInput {
+          z-index: -1;
+        }
+
+        .wordContainer {
+          background-color: $bg-color;
+          height: 117.562px;
+          font-size: 1.5rem;
+          position: relative;
+          
+          .caret {
+            width: 0.1em;
+            height: 1.2em;
+            position: absolute;
+            top: 3.6px;
+            left: 5px;
+            background-color: $main-color;
+            display: block;
+
+            @keyframes flashSmooth {
+              0% {opacity: 1;}
+              50% {opacity: 0;}
+              100% {opacity: 1;}
             }
 
+            animation: flashSmooth ease infinite 1s;
+          }
+
+          .word {
+            display: inline-block;
+            margin: 0.25em;
+            color: $sub-color;
+            border-bottom: 2px solid transparent;
+
             &.error {
-              color: $error-color;
+              border-bottom: $error-color 2px solid;
+            }
+
+            .letter {
+              line-height: 1em;
+              font-size: 1em;
+              font-variant: no-common-ligatures;
+              display: inline-block;
+              
+              &.correct {
+                color: $main-color;
+              }
+
+              &.error {
+                color: $error-color;
+              }
             }
           }
         }
