--- a/src/App.scss
+++ b/src/App.scss
@@ -44,12 +44,13 @@ $error-color: #d70000;
           
           .caret {
             width: 0.1em;
-            height: 1.2em;
+            height: 1em;
             position: absolute;
             top: 3.6px;
             left: 5px;
             background-color: $main-color;
             display: block;
+            border-radius: 0.5rem;
 
             @keyframes flashSmooth {
               0% {opacity: 1;}
@@ -63,6 +64,7 @@ $error-color: #d70000;
           .word {
             display: inline-block;
             margin: 0.25em;
+            margin-top: 0;
             color: $sub-color;
             border-bottom: 2px solid transparent;
 
