--- a/src/styles/Result.scss
+++ b/src/styles/Result.scss
@@ -2,4 +2,10 @@
     text-align: center;
     font-size: 7em;
     outline: none;
+    animation: showup 2s ease;
+
+    @keyframes showup {
+        0% {opacity: 0;}
+        100% {opacity: 1;};
+    }
 }
