random text generator

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,6 +59,10 @@ $error-color: #d70000;
             }
 
             animation: flashSmooth ease infinite 1s;
+
+            &.active {
+              animation: none;
+            }
           }
 
           .word {
