--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 body {
   margin: 0;
-  font-family: "Roboto", "Roboto", "Vazirmatn", monospace;
+  font-family: 'Roboto Mono', monospace;
 }
