--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -42,7 +42,7 @@ $error-color: #d70000;
           font-size: 1.5rem;
           position: relative;
           
-          .caret {
+          #caret {
             width: 0.1em;
             height: 1em;
             position: absolute;
