--- a/frontend/src/styles/Result.scss
+++ b/frontend/src/styles/Result.scss
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 7em;
     outline: none;
-    animation: showup 2s ease forwards;
+    animation: showup 500ms ease forwards;
 
     @keyframes showup {
         0% {opacity: 0;}
